--- a/scripts/Quices/Quiz3.ipynb
+++ b/scripts/Quices/Quiz3.ipynb
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "#pip install -q astroquery\n",
+    "#!pip install -q astroquery\n",
     "#Importando las librerias necesarias\n",
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -204,8 +204,7 @@
     "print(f\"x: {errores_verlet[0]:.2f}%, y: {errores_verlet[1]:.2f}%, z: {errores_verlet[2]:.2f}%\")\n",
     "print(f\"vx: {errores_verlet[3]:.2f}%, vy: {errores_verlet[4]:.2f}%, vz: {errores_verlet[5]:.2f}%\")\n",
     "\n",
-    "print(f'\\nComo se puede observar en los porcentajes de error el método de verlet en este caso fue un poco más preciso')\n",
-    "Condiciones_Jupiter"
+    "print(f'\\nComo se puede observar en los porcentajes de error el método de verlet en este caso fue un poco más preciso')\n"
    ]
   },
   {
