PST 1 primer punto listo

--- a/scripts/Problem sets/PS1_NCuerpos.ipynb
+++ b/scripts/Problem sets/PS1_NCuerpos.ipynb
@@ -41,7 +41,13 @@
         "\n",
         "$\\nabla U(r) = \\frac{dU}{dr} \\hat{r}$\n",
         "\n",
-        "$\\nabla U(r) = \\frac{G m_1 m_2}{r^2} \\hat{r}$"
+        "$\\nabla U(r) = \\frac{G m_1 m_2}{r^2} \\hat{r}$\n",
+        "\n",
+        "Vemos que la fuerza gravitacional es simplemente el negativo del gradiente de la energía potencial gravitacional:\n",
+        "\n",
+        "$\\mathbf{F} = -\\nabla U(r)$\n",
+        "\n",
+        "Por lo tanto, hemos demostrado que la fuerza gravitacional es conservativa"
       ]
     },
     {
