PS1 ahora estan las gráficas de la trayectoria de lo splanetas en el sistema solar

--- a/scripts/Homeworks/Bryan Camilo Restrepo Arcila_ CC 1000567825_ MCON_Tarea1_ConstantesMovimientoSistemaSolar.ipynb
+++ b/scripts/Homeworks/Bryan Camilo Restrepo Arcila_ CC 1000567825_ MCON_Tarea1_ConstantesMovimientoSistemaSolar.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4873,7 +4873,7 @@
         }
       ],
       "source": [
-        "#Para este ejercicio podemos usar los datos de las posiciones de los planetas provenientes de astropy\n",
+        "#Para este ejercicio podemos usar los datos de las posiciones de los planetas provenientes de astroquery\n",
         "# Lista de IDs de los planetas\n",
         "id_planets = list(np.arange(199, 999, 100))\n",
         "\n",
@@ -4945,21 +4945,7 @@
       ],
       "source": [
         "#Para este ejercicio podemos usar los datos de las posiciones de los planetas provenientes de astropy\n",
-        "# Lista de IDs de los planetas\n",
-        "id_planets = list(np.arange(199, 999, 100))\n",
         "\n",
-        "\n",
-        "# Diccionario con los nombres de los planetas para una mejor identificación\n",
-        "planet_Period_in_days = {\n",
-        "    199: 88+20,          # Mercury\n",
-        "    299: 225+20,         # Venus\n",
-        "    399: 365.25+20,      # Earth\n",
-        "    499: 687+20,         # Mars\n",
-        "    599: 11.9 * 365.25+20,  # Jupiter\n",
-        "    699: 29.5 * 365.25+20,  # Saturn\n",
-        "    799: 84 * 365.25+20,    # Uranus\n",
-        "    899: 165 * 365.25+20,   # Neptune\n",
-        "}\n",
         "\n",
         "fig = plt.figure(figsize=(10, 10))\n",
         "ax = plt.axes(projection='3d')\n",
