--- a/scripts/Clase/Copia_de_Copia_de_Trayectoria_de_la_tierra_.ipynb
+++ b/scripts/Clase/Copia_de_Copia_de_Trayectoria_de_la_tierra_.ipynb
@@ -2,6 +2,82 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting plotly\n",
+            "  Obtaining dependency information for plotly from https://files.pythonhosted.org/packages/26/5d/1e13b597ed8e54803e9ac6ded18c04cd35d8cbc49016778ec50c4ca9e9d5/plotly-5.16.1-py2.py3-none-any.whl.metadata\n",
+            "  Downloading plotly-5.16.1-py2.py3-none-any.whl.metadata (7.0 kB)\n",
+            "Collecting tenacity>=6.2.0 (from plotly)\n",
+            "  Obtaining dependency information for tenacity>=6.2.0 from https://files.pythonhosted.org/packages/f4/f1/990741d5bb2487d529d20a433210ffa136a367751e454214013b441c4575/tenacity-8.2.3-py3-none-any.whl.metadata\n",
+            "  Downloading tenacity-8.2.3-py3-none-any.whl.metadata (1.0 kB)\n",
+            "Requirement already satisfied: packaging in /home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages (from plotly) (23.1)\n",
+            "Downloading plotly-5.16.1-py2.py3-none-any.whl (15.6 MB)\n",
+            "\u001b[2K   \u001b[91m━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.3/15.6 MB\u001b[0m \u001b[31m13.8 kB/s\u001b[0m eta \u001b[36m0:13:36\u001b[0m\n",
+            "\u001b[?25h\u001b[31mERROR: Exception:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 438, in _error_catcher\n",
+            "    yield\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 561, in read\n",
+            "    data = self._fp_read(amt) if not fp_closed else b\"\"\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 527, in _fp_read\n",
+            "    return self._fp.read(amt) if amt is not None else self._fp.read()\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/cachecontrol/filewrapper.py\", line 90, in read\n",
+            "    data = self.__fp.read(amt)\n",
+            "  File \"/usr/lib/python3.10/http/client.py\", line 466, in read\n",
+            "    s = self.fp.read(amt)\n",
+            "  File \"/usr/lib/python3.10/socket.py\", line 705, in readinto\n",
+            "    return self._sock.recv_into(b)\n",
+            "  File \"/usr/lib/python3.10/ssl.py\", line 1274, in recv_into\n",
+            "    return self.read(nbytes, buffer)\n",
+            "  File \"/usr/lib/python3.10/ssl.py\", line 1130, in read\n",
+            "    return self._sslobj.read(len, buffer)\n",
+            "TimeoutError: The read operation timed out\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/cli/base_command.py\", line 180, in exc_logging_wrapper\n",
+            "    status = run_func(*args)\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/cli/req_command.py\", line 248, in wrapper\n",
+            "    return func(self, options, args)\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/commands/install.py\", line 377, in run\n",
+            "    requirement_set = resolver.resolve(\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/resolution/resolvelib/resolver.py\", line 161, in resolve\n",
+            "    self.factory.preparer.prepare_linked_requirements_more(reqs)\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 565, in prepare_linked_requirements_more\n",
+            "    self._complete_partial_requirements(\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/operations/prepare.py\", line 479, in _complete_partial_requirements\n",
+            "    for link, (filepath, _) in batch_download:\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/network/download.py\", line 183, in __call__\n",
+            "    for chunk in chunks:\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/cli/progress_bars.py\", line 53, in _rich_progress_bar\n",
+            "    for chunk in iterable:\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_internal/network/utils.py\", line 63, in response_chunks\n",
+            "    for chunk in response.raw.stream(\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 622, in stream\n",
+            "    data = self.read(amt=amt, decode_content=decode_content)\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 560, in read\n",
+            "    with self._error_catcher():\n",
+            "  File \"/usr/lib/python3.10/contextlib.py\", line 153, in __exit__\n",
+            "    self.gen.throw(typ, value, traceback)\n",
+            "  File \"/home/clickgreen/celestial_mechanics/.venv/lib/python3.10/site-packages/pip/_vendor/urllib3/response.py\", line 443, in _error_catcher\n",
+            "    raise ReadTimeoutError(self._pool, None, \"Read timed out.\")\n",
+            "pip._vendor.urllib3.exceptions.ReadTimeoutError: HTTPSConnectionPool(host='files.pythonhosted.org', port=443): Read timed out.\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install plotly"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "metadata": {
         "id": "zvJfgpycsKyW"
