primera version del punto 4

--- a/scripts/Homeworks/Bryan Camilo Restrepo Arcila_ CC 1000567825_ MCON_Tarea1_ConstantesMovimientoSistemaSolar.ipynb
+++ b/scripts/Homeworks/Bryan Camilo Restrepo Arcila_ CC 1000567825_ MCON_Tarea1_ConstantesMovimientoSistemaSolar.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 610,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 611,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4570,7 +4570,7 @@
         "\n",
         "for i in id_planets:\n",
         "    # Extrayendo los datos de los planetas en referencia al baricentro del sistema solar\n",
-        "    information = Horizons(id=str(i), location='0', epochs={'start': '2002-01-01', 'stop': '2022-12-31', 'step': '90d'}).vectors().to_pandas()[['datetime_str', 'x', 'y', 'z', 'vx', 'vy', 'vz']]\n",
+        "    information = Horizons(id=str(i), location='@0', epochs={'start': '2002-01-01', 'stop': '2022-12-31', 'step': '90d'}).vectors().to_pandas()[['datetime_str', 'x', 'y', 'z', 'vx', 'vy', 'vz']]\n",
         "    #vamos a agregarle la magnitud de la posición:\n",
         "    information['|r|'] = (information['x']**2 + information['y']**2 + information['z']**2)**0.5\n",
         "    #Vamos a agregarle la magnitud de la velocidad:\n",
