HW2 version entregable 2

--- a/scripts/Homeworks/MCON_Tarea2_SistemasJerarquicos.ipynb
+++ b/scripts/Homeworks/MCON_Tarea2_SistemasJerarquicos.ipynb
@@ -2537,10 +2537,12 @@
         }
       ],
       "source": [
-        "average_kinetic=np.mean(total_kinetic)\n",
-        "average_potential=np.mean(total_potential)\n",
-        "average_mechanical=np.mean(total_mechanical)\n",
+        "#Obteniendo las energías promedio\n",
+        "average_kinetic=np.mean(total_kinetic) #Promedio de la energía cinética\n",
+        "average_potential=np.mean(total_potential) #Promedio de la energía Potencial\n",
+        "average_mechanical=np.mean(total_mechanical)#Promedio de la energía Mecánica\n",
         "\n",
+        "#armando un dataframe con esta información\n",
         "dic={'average_energies':[average_kinetic,average_potential,average_mechanical,-2*average_kinetic]}\n",
         "df=pd.DataFrame(dic,index=['EcT J','UT J','ET J','-2EcT J'])\n",
         "df"
