--- a/scripts/Homeworks/MCON_Tarea2_SistemasJerarquicos.ipynb
+++ b/scripts/Homeworks/MCON_Tarea2_SistemasJerarquicos.ipynb
@@ -2097,7 +2097,7 @@
         "    ax.plot(ts, data, color=color_map(position-1))\n",
         "    ax.set_title(title, fontweight='bold') \n",
         "    ax.set_xlabel('Tiempo (UT)')\n",
-        "    ax.set_ylabel('Espacio (ua)')\n",
+        "    ax.set_ylabel('Espacio (0.01 ua)')\n",
         "    ax_list.append(ax)\n",
         "\n",
         "#Coordendas equivalentes segun indice\n",
@@ -2552,7 +2552,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Como se puede observar en el DataFrame anterior no se cumplen las condiciones de que:\n",
+        "Como se puede observar en el DataFrame anterior  se cumplen las condiciones de que:\n",
         "\n",
         "$$<U> \\approx  -2<K>$$\n",
         "$$E \\approx  -<K>$$\n",
