PS2 inciio punto 5

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -205,6 +205,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Iniciando, tenemos que:\n",
+        "\n",
+        "$$\\vec{e} = \\vec{A}/\\mu$$\n",
+        "$$\\vec{A} = \\dot{\\vec{r}}\\times \\vec{h}  - \\mu \\hat{r}$$\n",
+        "\n",
+        "$$\\vec{e} \\cdot \\vec{r} =[\\frac{\\dot{\\vec{r}}\\times \\vec{h}}{\\mu}  - \\hat{r}] \\cdot \\vec{r}$$\n",
+        "\n",
+        "$$\\vec{e} \\cdot \\vec{r} = \\vec{r}\\cdot\\frac{\\dot{\\vec{r}}\\times \\vec{h}}{\\mu}  - \\hat{r} \\cdot \\vec{r}$$\n",
+        "\n",
+        "$$ercos\\theta_{er}=\\frac{\\vec{h}}{\\mu}\\cdot(\\vec{r}\\times \\dot{\\vec{r}})  - r$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "eWhnrt6ehTGN"
       },
