HW2 inicio punto 3 y 4

--- a/scripts/Homeworks/MC_Tarea3_AproximacionApophis.ipynb
+++ b/scripts/Homeworks/MC_Tarea3_AproximacionApophis.ipynb
@@ -597,6 +597,178 @@
         "\n",
         "df"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Usando los elementos orbitales de ambos cuerpos determine la mínima distancia a la que se encontarán ambas órbitas en cualquier momento del futuro. A esta distancia se la llama MOID, por el acrónimo en inglés *Minimum orbital intersection distance*.\n",
+        "\n",
+        "### 4. Para saber cuándo se producirá la máxima aproximación entre los dos cuerpos es necesario sin embargo resolver el problema de los dos cuerpos en el tiempo. Para ello use la ecuación de Kepler y los métodos aprendidos en clase para propagar hacia el futuro la posición de la Tierra y del asteroide en el tiempo y determinar la fecha, hora y distancia de la próxima aproximación. Para ello avance primero de mes en mes por ejemplo, y luego, cerca a la aproximación máxima, de día en día, de hora en hora, hasta encontrar el punto de mínima distancia. ¿En qué fecha, hora y distancia predice usted que se producirá la máxima aproximación?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Para realizar este proceso, primero voy a realizar una o varias funciones que me calcule el vector de estado final, dados los elementos orbitales el tiempo inicial y final"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Funciones auxiliares"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "-159.55302175630453"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def prediccion(jd,jdf,a,e,I,Omega,w,f,n):\n",
+        "    # E inicial\n",
+        "    E = 2*np.arctan(np.sqrt((1-e)/(1+e))*np.tan(f*deg2rad/2))\n",
+        "    #E=E*rad2deg\n",
+        "\n",
+        "    # M = E - e sin E\n",
+        "    M = E - e*np.sin(E)\n",
+        "    M=M*rad2deg\n",
+        "\n",
+        "    #Ahora para las condiciones finales:\n",
+        "    Mf = M + n*(jdf-jd)\n",
+        "    Ef,error,niter = pc.kepler_newton(Mf*deg2rad,e,delta=1e-14)\n",
+        "    #Ef=Ef*rad2deg\n",
+        "\n",
+        "    #Encontremos la anomalía verdadera\n",
+        "    ff = 2*np.arctan(np.sqrt((1+e)/(1-e))*np.tan(Ef/2))\n",
+        "    ff=ff*rad2deg\n",
+        "    \n",
+        "    return ff\n",
+        "prediccion(jd,jd+365.25,1,\n",
+        "        e_earth, I_earth, Omega_earth,\n",
+        "        omega_earth, f_earth, n_earth)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>targetname</th>\n",
+              "      <th>datetime_jd</th>\n",
+              "      <th>datetime_str</th>\n",
+              "      <th>e</th>\n",
+              "      <th>q</th>\n",
+              "      <th>incl</th>\n",
+              "      <th>Omega</th>\n",
+              "      <th>w</th>\n",
+              "      <th>Tp_jd</th>\n",
+              "      <th>n</th>\n",
+              "      <th>M</th>\n",
+              "      <th>nu</th>\n",
+              "      <th>a</th>\n",
+              "      <th>Q</th>\n",
+              "      <th>P</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Earth (399)</td>\n",
+              "      <td>2460516.75</td>\n",
+              "      <td>A.D. 2024-Jul-25 06:00:00.0000</td>\n",
+              "      <td>0.017141</td>\n",
+              "      <td>0.982279</td>\n",
+              "      <td>0.004911</td>\n",
+              "      <td>154.156128</td>\n",
+              "      <td>310.559375</td>\n",
+              "      <td>2.460681e+06</td>\n",
+              "      <td>0.986481</td>\n",
+              "      <td>198.347353</td>\n",
+              "      <td>197.7414</td>\n",
+              "      <td>0.99941</td>\n",
+              "      <td>1.016542</td>\n",
+              "      <td>364.933398</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    targetname  datetime_jd                    datetime_str         e  \\\n",
+              "0  Earth (399)   2460516.75  A.D. 2024-Jul-25 06:00:00.0000  0.017141   \n",
+              "\n",
+              "          q      incl       Omega           w         Tp_jd         n  \\\n",
+              "0  0.982279  0.004911  154.156128  310.559375  2.460681e+06  0.986481   \n",
+              "\n",
+              "            M        nu        a         Q           P  \n",
+              "0  198.347353  197.7414  0.99941  1.016542  364.933398  "
+            ]
+          },
+          "execution_count": 58,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "queryf = Horizons(id='399',location='@sun',epochs=jd+365.25)\n",
+        "elementf = queryf.elements().to_pandas()\n",
+        "elementf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "33"
+            ]
+          },
+          "execution_count": 46,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "180-147"
+      ]
     }
   ],
   "metadata": {
