PS2 punto 5 listo

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -212,11 +212,54 @@
         "$$\\vec{e} = \\vec{A}/\\mu$$\n",
         "$$\\vec{A} = \\dot{\\vec{r}}\\times \\vec{h}  - \\mu \\hat{r}$$\n",
         "\n",
+        "haciendo un producto punto por $\\vec{r}$\n",
+        "\n",
         "$$\\vec{e} \\cdot \\vec{r} =[\\frac{\\dot{\\vec{r}}\\times \\vec{h}}{\\mu}  - \\hat{r}] \\cdot \\vec{r}$$\n",
         "\n",
         "$$\\vec{e} \\cdot \\vec{r} = \\vec{r}\\cdot\\frac{\\dot{\\vec{r}}\\times \\vec{h}}{\\mu}  - \\hat{r} \\cdot \\vec{r}$$\n",
         "\n",
-        "$$ercos\\theta_{er}=\\frac{\\vec{h}}{\\mu}\\cdot(\\vec{r}\\times \\dot{\\vec{r}})  - r$$"
+        "$$ercos\\theta_{er}=\\frac{\\vec{h}}{\\mu}\\cdot(\\vec{r}\\times \\dot{\\vec{r}})  - r$$\n",
+        "\n",
+        "$$ercos\\theta_{er}=\\frac{h^2}{\\mu}-r$$\n",
+        "\n",
+        "despejando r tenemso que:\n",
+        "\n",
+        "$$r=\\frac{{h^2}/{\\mu}}{1+ecos\\theta_{er}}$$\n",
+        "\n",
+        "La anterior es justo la expresión  de una cónica en coordenadas polares\n",
+        "\n",
+        "b. veamos ahora cual es la distancia máxima y mínima en el caso de una orbita elíptica\n",
+        "\n",
+        "debemos tener en cuenta que para que la función r se minimice el denominador debe de ser máximo, y al contrario para r máximo, lo que podemos variar de la ecuación es el theta, así que, rmin -> $\\theta=0$  y rmax -> $\\theta=\\pi$\n",
+        "\n",
+        "Para r min:\n",
+        "\n",
+        "$$r_{min}=\\frac{{h^2}/{\\mu}}{1+ecos\\theta_{0}}$$\n",
+        "\n",
+        "$$r_{min}=\\frac{{h^2}/{\\mu}}{1+e}$$\n",
+        "\n",
+        "Para r max:\n",
+        "\n",
+        "$$r_{max}=\\frac{{h^2}/{\\mu}}{1+ecos\\theta_{\\pi}}$$\n",
+        "\n",
+        "$$r_{max}=\\frac{{h^2}/{\\mu}}{1-e}$$  \n",
+        "\n",
+        "como e para una elipse cumple que 0 < e < 1 entonces, para rmax no hay problema que el denominador sea negativo\n",
+        "\n",
+        "c. veamos la relación entre h y a:\n",
+        "\n",
+        "para esto debemos de tener en cuenta que rmax+rmin=2a, en el caso de la elipse:\n",
+        "\n",
+        "$$r_{max}+r_{min}=2a$$\n",
+        "\n",
+        "$$\\frac{{h^2}/{\\mu}}{1-e}+\\frac{{h^2}/{\\mu}}{1+e}=2a$$\n",
+        "\n",
+        "$$\\frac{{h^2}/{\\mu}(1+e+1-e)}{(1-e^2)}=2a$$\n",
+        "\n",
+        "así tenemos que:\n",
+        "\n",
+        "$$\\frac{h^2}{\\mu} = a(1-e^2)$$\n",
+        "------"
       ]
     },
     {
