PS2 punto 6 listo

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -181,6 +181,16 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Solución**\n",
+        "\n",
+        "\n",
+        "----"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yDSup34Yl7sE"
       },
@@ -207,6 +217,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "**Solución**\n",
+        "\n",
         "Iniciando, tenemos que:\n",
         "\n",
         "$$\\vec{e} = \\vec{A}/\\mu$$\n",
@@ -273,6 +285,61 @@
         "$$\n",
         "\\displaystyle L = \\frac{\\pi}{P}\\frac{m_1m_2}{m_1+m_2}\\sqrt{D_1D_2}(D_1+D_2)\n",
         "$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Solución**\n",
+        "\n",
+        "Para esto debemos tener en cuenta un resultado del problem set 1:\n",
+        "\n",
+        "$$\\vec{L} = M\\vec{R}\\times \\dot{\\vec{R}} + m_r \\vec{r}\\times \\dot{\\vec{r}}$$\n",
+        "\n",
+        "si definimos el origen de nuestro sistema coordenado en el centro de masas, tenemos que:\n",
+        "\n",
+        "$$\\vec{L} =  m_r \\vec{r}\\times \\dot{\\vec{r}}$$\n",
+        "\n",
+        "así:\n",
+        "\n",
+        "$$L=mrh$$\n",
+        "\n",
+        "teniendo el cuenta el resultado del punto 5 $\\frac{h^2}{\\mu} = a(1-e^2)$, despejando h y reemplazando en L:\n",
+        "\n",
+        "$$L=m_r\\sqrt{\\mu a(1-e^2)}$$\n",
+        "\n",
+        "Ahora expresemos $(1-e^2)$ en terminos de a y D:\n",
+        "\n",
+        "$$r_{min}=D_1=\\frac{{h^2}/{\\mu}}{1+e}=\\frac{a(1-e^2)}{1+e}=a(1-e)$$\n",
+        "\n",
+        "$$r_{max}=D_2=\\frac{{h^2}/{\\mu}}{1-e}=\\frac{a(1-e^2)}{1-e}=a(1+e)$$\n",
+        "\n",
+        "$$D_1 D_2=a^2(1-e)$$\n",
+        "\n",
+        "reemplazando esto en la ultima expresión para L:\n",
+        "\n",
+        "$$L=m_r\\sqrt{\\mu \\frac{D_1 D_2}{a}}$$\n",
+        "\n",
+        "si tenemos en cuenta que la terecera ley de Kepler nos dice que $\\mu=\\frac{a^3 4\\pi^2}{P^2}$, lo podemos reemplazar, y nos queda:\n",
+        "\n",
+        "$$L=m_r\\sqrt{\\frac{a^3 4\\pi^2}{P^2} \\frac{D_1 D_2}{a}}$$\n",
+        "\n",
+        "$$L=m_r\\sqrt{\\frac{a^2 4\\pi^2}{P^2} D_1 D_2}$$\n",
+        "\n",
+        "sabemos que $a^2=\\frac{(D_1+D_2)^2}{4}$, podemos reemplazarlo:\n",
+        "\n",
+        "\n",
+        "$$L=m_r\\sqrt{\\frac{(D_1+D_2)^2}{4} \\frac{ 4\\pi^2}{P^2} D_1 D_2}$$\n",
+        "\n",
+        "\n",
+        "de aqui se puede deducir facilmente con un poco de algebra que:\n",
+        "\n",
+        "\n",
+        "$$L = \\frac{\\pi}{P}\\frac{m_1m_2}{m_1+m_2}\\sqrt{D_1D_2}(D_1+D_2)$$\n",
+        "\n",
+        "\n",
+        "-----"
       ]
     },
     {
