HW2 datos personales

--- a/scripts/Homeworks/MC_Tarea3_AproximacionApophis.ipynb
+++ b/scripts/Homeworks/MC_Tarea3_AproximacionApophis.ipynb
@@ -26,11 +26,11 @@
       },
       "source": [
         "<hr/>\n",
-        "<b>Nombre</b>:\n",
+        "<b>Nombre</b>: Bryan Camilo  Restrepo Arcila\n",
         "<br/>\n",
-        "<b>Cédula</b>:\n",
+        "<b>Cédula</b>: 1000567825\n",
         "<br/>\n",
-        "<b>Última actualización</b>:\n",
+        "<b>Última actualización</b>: 2023-10-02\n",
         "<hr/>"
       ]
     },
