PS2 punto 4 listo

--- a/scripts/Problem sets/PS2_2BP.ipynb
+++ b/scripts/Problem sets/PS2_2BP.ipynb
@@ -185,7 +185,44 @@
       "source": [
         "**Solución**\n",
         "\n",
+        "la ecuación de una cónica respecto al centro esta dada por:\n",
         "\n",
+        "$$\\frac{x_c^2}{a^2}+\\frac{y_c^2}{b^2}=1$$\n",
+        "\n",
+        "así la ecuación paramétrica esta dada por:\n",
+        "\n",
+        "$$x_c=acosE$$\n",
+        "$$y_c=bsinE$$\n",
+        "\n",
+        "Trasladandolo al sistema de origen en el foco podemos ver que:\n",
+        "\n",
+        "$$r^2=(acosE-ae)^2+b^2sin^2E$$\n",
+        "\n",
+        "por definición:\n",
+        "\n",
+        "$$b^2=a^2(1-e^2)$$\n",
+        "\n",
+        "Reemplazando esto en r podemos obtener que:\n",
+        "\n",
+        "> $$r=a(1 - e\\cos E)$$\n",
+        "\n",
+        "A partir de esto se puede obtener que:\n",
+        "\n",
+        "$$r cosf = a cosE - ae$$\n",
+        "$$r sinf = b sinE$$\n",
+        "\n",
+        "y teniendo en cuenta la identidad de angulo doble:\n",
+        "\n",
+        "$$tan\\frac{f}{2}=\\frac{1-cosf}{sinf}$$\n",
+        "\n",
+        "reemplazando cosf y sinf, tenems que:\n",
+        "\n",
+        "$$tan\\frac{f}{2}=\\frac{1-\\frac{acosE-ae}{r}}{\\frac{bsinE}{r}}$$\n",
+        "\n",
+        "$$tan\\frac{f}{2}=\\frac{a(1-ecosE)-(acosE-ae)}{\\sqrt{1-e^2}asinE}$$\n",
+        "\n",
+        "Simplificando tenemos que:\n",
+        "$$\\tan \\frac{f}{2} = \\sqrt{\\frac{1+e}{1-e}}\\tan \\frac{E}{2}.$$\n",
         "----"
       ]
     },
